2003-12-21  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in: Fixed compatibility for non-bash systems: Used
	  "VAR=VALUE; export VAR" instead of "export VAR=VALUE" (Thanks
	  to Florian Diesch <diesch@spamfence.net>).

2003-12-01  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, Makefile.in: Added fixes and improvements for
	  NetBSD compatibility. Thanks to Bruce J.A. Nourish
	  (bjan+foomatic-devel at bjan dot net) for this contribution.

2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged all files of the repository with "foomatic-3_0-bp",
	  started stable branch "foomatic-3_0-branch".
	
2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1rc1. 
	  Tag name: "foomatic-filters-3_0_1rc1".

	* README, USAGE: Updated for version 3.0.1rc1.

2003-11-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in, filter.conf: Added support for CUPS raster
	  drivers to foomatic-rip. Now CUPS raster drivers can be used
	  with every spooler.

2003-10-24  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug of sometimes an extra blank page
	  being printed after the job.

2003-10-21  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Added option "--disable-file-converter-check" to
	  disable checking whether there is a file converter installed.

2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Added /usr/local/libexec to LIBSEARCHPATH for *BSD
	  compatibilty. Thanks to Sebastian Horzela (sh at horzela dot
	  com).
	
	* configure.in: For CUPS a2ps, enscript, or mpage is not needed,
	  here texttops of CUPS is used be default. So let ./configure
	  also check for texttops.

	* tests/Makefile.in: Continue testing when comparing the result of
	  a test with the reference file fails, give only a warning in
	  such a case.

2003-10-20  Patrick Powell <papowell@lprng.com>

	* added 'use strict' and -w to the Perl options.
