@@ -1,7 +1,5 @@
-
-Foomatic 3.0.1rc1
-=================
-
+Foomatic 3.1.0
+==============
 
 foomatic-filters
 ----------------
@@ -18,6 +16,12 @@ http://www.linuxprinting.org/
 
 This README contains mainly info for developers. See the file USAGE if
 you want to know how to use Foomatic.
+
+This is the development line 3.1.x of Foomatic, for production, use
+the stable line.
+
+   $Id$
+   $Name$
 
 
 Copying
