@@ -1,4 +1,5 @@
 # This file allows you to configure the "foomatic-rip" filter.
+# $Id :$
 
 # Uncomment the lines where you want to do a change and enter the
 # desired value.
