@@ -1,3 +1,9 @@
+#!/bin/sh
+# Generate configure script
+#
+# $Id$
+# $Name$
+
 aclocal
 autoconf
 perl -p -i -e "s=\#include <xmlversion.h>=\#include <libxml/xmlversion.h>=g" configure
