@@ -5,6 +5,7 @@
 # Public domain
 
 # $Id$
+# $Name$
 
 errstatus=0
 
